Initial commit-test2-1

--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
       .badge {
         display: inline-flex;
         align-items: center;
+        width: max-content;
         gap: 6px;
         padding: 6px 10px;
         border-radius: 999px;
